# fastem-sofima

./: .gitignore  README.md  example_notebook.ipynb  example_notebooks_large_volumes.ipynb  export_2_webknossos.py  pyproject.toml
fastem_sofima/: __init__.py  importo.py
src/fastem_sofima/: utils.py
